# snap-graph

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  libtool  ltmain.sh
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
include/: Makefile.in  bheap.h  binary_heap.h  graph_defs.h  graph_gen.h  graph_kernels.h  graph_metrics.h  graph_modularity.h  graph_partitioning.h  graph_vertex_cover.h  network.h  utils.h
lib/: Makefile.am  Makefile.in
m4/: ax_cc_maxopt.m4  ax_cflags_warn_all.html  ax_gcc_archflag.m4
src/: Makefile.am  Makefile.in
src/graph_generation/: Makefile.am  Makefile.in  gen_RMAT_graph.c  gen_lmesh_graph.c  gen_mesh_graph.c  gen_random_graph.c  gen_sqmesh_graph.c  graph_gen.c  read_DIMACS_graph.c  read_GML_graph.c  read_SNAP_graph.c  readgml.c
src/graph_kernels/: Makefile.am  Makefile.in  biconnected_components.c  breadth_first_search.c  connected_components.c  graph_diameter.c  vertex_cover.c
src/graph_kernels/tmp/: BFS_UY.c
src/graph_metrics/: Makefile.am  Makefile.in  bc_cuda.cu  betweennessCentrality.c  closeness_centrality.c  community_modularity.c  cuda_betweenness_centrality.c  edge_betweenness_centrality.c  stress_centrality.c  test.c  vertex_betweenness_centrality.c
src/graph_partitioning/: Makefile.am  Makefile.in  betweenness_partitioning.c  modularity_betweenness.c  modularity_greedy_agglomerative.c  modularity_sequential.c  modularity_spectral.c  seed_community_detection.c
src/misc/: Makefile  Makefile.am  Makefile.in  bheap.c  list.c  utils.c  vectorUtils.c
src/misc/.deps/: list.Plo  utils.Plo  vectorUtils.Plo
src/sprng2.0/: Makefile.am  Makefile.in  checkid.c  cmrg.c  int64.h  lcg.c  lcg.h  lcg64.c  lfg.c  memory.c  mlfg.c  primes_32.c  primes_32.h  primes_64.c  primes_64.h  sprng.c
src/utils/: Makefile.am  Makefile.in  utils.c
test/: Makefile.am  Makefile.in  drive_BFS.c  drive_biconnected_components.c  drive_modularity.c  drive_modularity_edge_betweenness.c  drive_modularity_greedy_agglomerative.c  drive_modularity_spectral.c  drive_seed_community_detection.c  drive_vertex_betweenness.c  drive_vertex_cover.c  dyn_test_config_file.txt  rand_100K_1M_undir_unwt.rnd  test.dim  test.gr  test.rand  test.rmat  test_dyn_ds.c  test_graph_dimacs_5_8.dim  test_graph_rmat_100K_1M_undir_unwt.rmat  test_graph_snap_5_8_undir_unwt.gr
