AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/include/sprng

noinst_LTLIBRARIES = libgraph_gen.la
libgraph_gen_la_SOURCES = graph_gen.c read_SNAP_graph.c \
read_DIMACS_graph.c read_METIS_graph.c read_GraphML_graph.c \
read_GML_graph.c \
gen_RMAT_graph.c gen_random_graph.c gen_sqmesh_graph.c \
gen_lmesh_graph.c 
